themes/brahier/assets/sass/custom/_brahier.scss
@import 'main';
@import 'typography';
@import 'epreuves';
@import 'header';

// Admonition

.admonition {
    font-size: larger;    
}

.dark-gold *,
.dark-gold {
    background-color: #91760d;
    color: white;
}

.covid-blue *,
.covid-blue {
    background-color: #07a0e2;
    color: white;
}

.covid-red *,
.covid-red {
    background-color: #c41b25;
    color: white;
}

.covid-orange *,
.covid-orange {
    background-color: #f29100;
    color: white;
}

.dark-blue *,
.dark-blue {
    background-color: #00008B;
    color: white;
    
    a:hover {
        border-bottom-color: #FFD700;
        color: #FFD700!important;
    }    
}


p {
    margin: 0;
}

p+h1,
p+h2,
p+h3,
p+h4,
p+h5,
p+h6,
p+p {
    margin-top: 2rem;
}

p+ul {
    margin-top: 0.5rem;
}

#main.home>.inner>section:nth-child(n+3) {
    border-top: none;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
}

header#header {
    font-size: 125%;
}

ul.buttonlist {
    list-style-type: none;
    padding-left: 0;
}

ul.buttonlist li {
    padding-left: 0;
    padding-bottom: .5em;
}

